src/test/ui/nll/constant-thread-locals-issue-47053.stderr
error[E0594]: cannot assign to data in a `&` reference
  --> $DIR/constant-thread-locals-issue-47053.rs:9:5
   |
LL |     FOO = 6;
   |     ^^^^^^^ cannot assign

error: aborting due to previous error

